--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 		<title></title>
-		<link rel="stylesheet" href="dist/css/app.css">
+		<link rel="stylesheet" href="./dist/css/app.css">
 	</head>
 
 	<body>
-		<script src="dist/js/app.js"></script>
+		<script src="./dist/js/app.js"></script>
 	</body>
 </html>
